src/test/ui/binop/issue-77910-2.stderr
error[E0369]: binary operation `==` cannot be applied to type `[fn item {foo}: for<'r> fn(&'r i32) -> &'r i32]`
  --> $DIR/issue-77910-2.rs:7:12
   |
LL |     if foo == y {}
   |        --- ^^ - _
   |        |
   |        [fn item {foo}: for<'r> fn(&'r i32) -> &'r i32]

error: aborting due to previous error

For more information about this error, try `rustc --explain E0369`.
